--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#">Alugar</a></li>
                 <li><a href="#">Imóvel Novo</a></li>
                 <li><a href="#">Serviços</a></li>
-                <li><a href="#"><p class="entrar">Entrar</p></a></li>
+                <li><a href="login.html"><p class="entrar">Entrar</p></a></li>
               </ul>
             </nav>
           </header>
@@ -57,7 +57,7 @@
             </div>
             <div class="users">
               <div class="card">
-                <img src="IMG/site1.jpg">
+                <a href="cadaCasa.html"><img src="IMG/site1.jpg"></a>
                 <h4>Bairro Militar </h4>
                 <p>Talatona </p>
                 <p>35.000.00 KZ </p>
@@ -79,7 +79,7 @@
                
               </div>
               <div class="card">
-                <img src="IMG/site1.jpg">
+                <a href="cadaCasa.html"><img src="IMG/site1.jpg"></a>
                 <h4>Bairro Militar </h4>
                 <p>Talatona </p>
                 <p>35.000.00 KZ </p>
@@ -100,7 +100,7 @@
 
               </div>
               <div class="card">
-                <img src="IMG/site1.jpg">
+                <a href="cadaCasa.html"><img src="IMG/site1.jpg"></a>
                 <h4>Bairro Militar </h4>
                 <p>Talatona </p>
                 <p>35.000.00 KZ </p>
@@ -120,7 +120,7 @@
                 </div>
               </div>
               <div class="card">
-                <img src="IMG/site1.jpg">
+                <a href="cadaCasa.html"><img src="IMG/site1.jpg"></a>
                 <h4>Bairro Militar </h4>
                 <p>Talatona </p>
                 <p>35.000.00 KZ </p>
@@ -144,7 +144,7 @@
   
             <div class="users">
               <div class="card">
-                <img src="IMG/site1.jpg">
+                <a href="cadaCasa.html"><img src="IMG/site1.jpg"></a>
                 <h4>Bairro Militar </h4>
                 <p>Talatona </p>
                 <p>35.000.00 KZ </p>
@@ -164,7 +164,7 @@
                 </div>
               </div>
               <div class="card">
-                <img src="IMG/site1.jpg">
+                <a href="cadaCasa.html"><img src="IMG/site1.jpg"></a>
                 <h4>Bairro Militar </h4>
                 <p>Talatona </p>
                 <p>35.000.00 KZ </p>
@@ -184,7 +184,7 @@
                 </div>
               </div>
               <div class="card">
-                <img src="IMG/site1.jpg">
+                <a href="cadaCasa.html"><img src="IMG/site1.jpg"></a>
                 <h4>Bairro Militar </h4>
                 <p>Talatona </p>
                 <p>35.000.00 KZ </p>
@@ -204,7 +204,7 @@
                 </div>
               </div>
               <div class="card">
-                <img src="IMG/site1.jpg">
+                <a href="cadaCasa.html"><img src="IMG/site1.jpg"></a>
                 <h4>Bairro Militar </h4>
                 <p>Talatona </p>
                 <p>35.000.00 KZ </p>
