--- a/Corrector.html
+++ b/Corrector.html
@@ -25,7 +25,7 @@
             </a></li>
              <li><a href="#" class="logout">
               <i class="fas fa-sign-out-alt"></i>
-              <span class="nav-item">Treminar sessão</span>
+              <span class="nav-item">Terminar sessão</span>
             </a></li>
           </ul>
         </nav>
@@ -43,13 +43,13 @@
               <h1>Lista dos Seus Imóveis Dispóniveis </h1>
               <table class="table">
                   <div class="cadastrar">
-                    <button class="redirect-button" onclick="redirectToPage1()">cadastrar Imóvel</button>
+                    <a href="cadastro_imovel.html"></a><button class="redirect-button" onclick="">Cadastrar imóvel</button></a>
                       <!-- script para botaõ funcionar  -->
-                      <script>
+                      <!--script>
                         function redirectToPage1(){
-                          window.location.href="Cadastro_Imovel.html"
+                          window.location.href="index.html"
                         }
-                      </script>
+                      </script-->
                   </div>
                  
                 <thead>
