--- a/cadastro_imovel.html
+++ b/cadastro_imovel.html
@@ -49,7 +49,7 @@
                 <label>Descrição da casa </label>
                 <input type="text" id="descricao" name="" placeholder="Descrição da casa" required>
 
-                <button class="btn-enviar" name="btn-submit" onclick="saveData()">Salvar</button>
+                <button class="btn-enviar" name="btn-submit" onclick="listImoveis()">Salvar</button>
                 <a class="btn-cancelar " href="Corrector.html">Cancelar</a>
             </form>   
         </div>
