--- a/cadastro_imovel.html
+++ b/cadastro_imovel.html
@@ -49,6 +49,17 @@
                 <label>Descrição da casa </label>
                 <input type="text" id="descricao" name="" placeholder="Descrição da casa" required>
 
+                        <!-- Campos para anexar fotos -->
+                <label>Foto 1</label>
+                <input type="file" id="foto1" name="foto1" accept="image/*" required>
+
+                <label>Foto 2</label>
+                <input type="file" id="foto2" name="foto2" accept="image/*" required>
+
+                <label>Foto 3</label>
+                <input type="file" id="foto3" name="foto3" accept="image/*" required>
+
+
                 <button class="btn-enviar" name="btn-submit" onclick="listImoveis()">Salvar</button>
                 <a class="btn-cancelar " href="Corrector.html">Cancelar</a>
             </form>   
