--- a/Corrector.html
+++ b/Corrector.html
@@ -43,13 +43,13 @@
               <h1>Lista dos Seus Imóveis Dispóniveis </h1>
               <table class="table">
                   <div class="cadastrar">
-                    <a href=""></a><button class="redirect-button" onclick="">Cadastrar imóvel</button></a>
+                   <button class="redirect-button" onclick="redirectToPage1_1()">Cadastrar imóvel</button>
                       <!-- script para botaõ funcionar  -->
-                      <!--script>
-                        function redirectToPage1(){
-                          window.location.href="index.html"
+                      <script>
+                        function redirectToPage1_1(){
+                          window.location.href="cadastro_imovel.html"
                         }
-                      </script-->
+                      </script>
                   </div>
                  
                 <thead>
