--- a/Corrector.html
+++ b/Corrector.html
@@ -7,7 +7,7 @@
       <!-- Font Awesome Cdn Link -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
     </head>
-    <body>
+    <body onload="listImoveis()">
       <div class="container">
         <nav>
           <ul>
@@ -65,140 +65,6 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <td class="active">359</td>
-                    <td>Loja </td>
-                    <td>Cacuaco</td>
-                    <td>50.000</td>
-                    <td>Com dois andares e com amarela </td>
-                    <td>
-                      <button class="redirect-button" onclick="redirectToPage2()">Detalhes</button>
-                      <!-- script para botaõ funcionar  -->
-                      <script>
-                        function redirectToPage2(){
-                          window.location.href="Detalhes_Imovel.html"
-                        }
-                      </script> 
-                    </td>
-                    <td>
-                      <button class="redirect-button" onclick="redirectToPage1()">Actualizar</button>
-                      <!-- script para botaõ funcionar  -->
-                      <script>
-                        function redirectToPage1(){
-                          window.location.href=""
-                        }
-                      </script>
-                    </td>
-                    <td>
-                      <button class="redirect-button" onclick="redirectToPage1()">Eliminar</button>
-                      <!-- script para botaõ funcionar  -->
-                      <script>
-                        function redirectToPage1(){
-                          window.location.href=""
-                        }
-                      </script>
-                    </td>
-                    
-                  </tr>
-                  <tr class="active">
-                    <td class="active">200</td>
-                    <td>Loja </td>
-                    <td>Cacuaco</td>
-                    <td>50.000</td>
-                    <td>Com dois andares e com amarela </td>
-                    <td>
-                      <button class="redirect-button" onclick="redirectToPage2()">Detalhes</button>
-                      <!-- script para botaõ funcionar  -->
-                      <script>
-                        function redirectToPage2(){
-                          window.location.href="Detalhes_Imovel.html"
-                        }
-                      </script> 
-                    </td>
-                    <td>
-                      <button class="redirect-button" onclick="redirectToPage1()">Actualizar</button>
-                      <!-- script para botaõ funcionar  -->
-                      <script>
-                        function redirectToPage1(){
-                          window.location.href="Adm_detalhes_casa.html"
-                        }
-                      </script>
-                    </td>
-                    <td>
-                      <button class="redirect-button" onclick="redirectToPage1()">Eliminar</button>
-                      <!-- script para botaõ funcionar  -->
-                      <script>
-                        function redirectToPage1(){
-                          window.location.href="Adm_detalhes_casa.html"
-                        }
-                      </script>
-                  </tr>
-                  <tr>
-                    <td class="active">250</td>
-                    <td>Residencial </td>
-                    <td>São Paulo </td>
-                    <td>1.500.000</td>
-                    <td>T4 com jardim e um escritorio </td>
-                    <td>
-                      <button class="redirect-button" onclick="redirectToPage2()">Detalhes</button>
-                      <!-- script para botaõ funcionar  -->
-                      <script>
-                        function redirectToPage2(){
-                          window.location.href="Detalhes_Imovel.html"
-                        }
-                      </script> 
-                    </td>
-                    <td>
-                      <button class="redirect-button" onclick="redirectToPage1()">Actualizar</button>
-                      <!-- script para botaõ funcionar  -->
-                      <script>
-                        function redirectToPage1(){
-                          window.location.href="Adm_detalhes_casa.html"
-                        }
-                      </script>
-                    </td>
-                    <td>
-                      <button class="redirect-button" onclick="redirectToPage1()">Eliminar</button>
-                      <!-- script para botaõ funcionar  -->
-                      <script>
-                        function redirectToPage1(){
-                          window.location.href="Adm_detalhes_casa.html"
-                        }
-                      </script>
-                  </tr>
-                  <tr>
-                    <td class="active">300</td>
-                    <td>Casa </td>
-                    <td>Kikolo</td>
-                    <td>250.000</td>
-                    <td>Com dois WC e uma lavandaria  </td>
-                    <td>
-                      <button class="redirect-button" onclick="redirectToPage2()">Detalhes</button>
-                      <!-- script para botaõ funcionar  -->
-                      <script>
-                        function redirectToPage2(){
-                          window.location.href="Detalhes_Imovel.html"
-                        }
-                      </script> 
-                    </td>
-                    <td>
-                      <button class="redirect-button" onclick="redirectToPage1()">Actualizar</button>
-                      <!-- script para botaõ funcionar  -->
-                      <script>
-                        function redirectToPage1(){
-                          window.location.href="Adm_detalhes_casa.html"
-                        }
-                      </script>
-                    </td>
-                    <td>
-                      <button class="redirect-button" onclick="redirectToPage1()">Eliminar</button>
-                      <!-- script para botaõ funcionar  -->
-                      <script>
-                        function redirectToPage1(){
-                          window.location.href="Adm_detalhes_casa.html"
-                        }
-                      </script>
-                  </tr>
                  
                 </tbody>
               </table>
@@ -210,7 +76,7 @@
       <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
       <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
       <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-      <script src="index.js"></script>
+      <script src="teste.js"></script>
     </body>
     </html>
     </span>
