--- a/cadastro_imovel.html
+++ b/cadastro_imovel.html
@@ -60,7 +60,7 @@
                 <input type="file" id="foto3" name="foto3" accept="image/*" required>
 
 
-                <button class="btn-enviar" name="btn-submit" onclick="listImoveis()">Salvar</button>
+                <button class="btn-enviar" name="btn-submit" onclick="saveData()">Salvar</button>
                 <a class="btn-cancelar " href="Corrector.html">Cancelar</a>
             </form>   
         </div>
@@ -68,8 +68,10 @@
       
       <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
       <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
       <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-      <script src="index.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
+      <script src="cadastra_imovel.js"></script>
 
     </body>
     </html>
