listar corretor e manutenção feitas

--- a/cadastro_imovel.html
+++ b/cadastro_imovel.html
@@ -49,6 +49,15 @@
                 <label>Descrição da casa </label>
                 <input type="text" id="descricao" name="" placeholder="Descrição da casa" required>
 
+                <label>Número de Quartos</label>
+                <input type="number" id="quartos" name="quartos" placeholder="Número de quartos" required>
+
+                <label>Número de Salas</label>
+                <input type="number" id="salas" name="salas" placeholder="Número de salas" required>
+
+                <label>Número de Cozinhas</label>
+                <input type="number" id="cozinhas" name="cozinhas" placeholder="Número de cozinhas" required>
+
                         <!-- Campos para anexar fotos -->
                 <label>Foto 1</label>
                 <input type="file" id="foto1" name="foto1" accept="image/*" required>
