--- a/Corrector.html
+++ b/Corrector.html
@@ -76,7 +76,7 @@
       <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
       <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
       <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-      <script src="teste.js"></script>
+      <script src="lista_corretor.js"></script>
     </body>
     </html>
     </span>
