--- a/cadaCasa.html
+++ b/cadaCasa.html
@@ -39,15 +39,12 @@
                 <p id="cozinhas"> cozinhas</p>
                 <p id="preco">Preço</p>
                 <p id="tipo" class="p2">Aluguel R$ 7.500</p>
-                <p id="localizacao" class="p3">Avenida Manoel Ribas 4716, Santa Maria, Luanda</p>
+                <p id="localizacao" class="p3"> Luanda</p>
             </div>
             <p id="descricao" class="descricao_casa">
-                Vista linda, cobertura totalmente mobiliada.
-                Com uma vista que vai deixar os seus dias mais leve e tranquilo. 
-                Essa cobertura está disponível para locação. Excelente localização e
-                 estrutura de condomínio.
+                Vista..
             </p>
-
+            <a href="contrato.html"><p class="lugar">Interessado!</p></a>
           </div>
 
         
