--- a/cadaCasa.html
+++ b/cadaCasa.html
@@ -19,7 +19,7 @@
                 <li><a href="#">Compar</a></li>
                 <li><a href="#">Alugar</a></li>
                 <li><a href="#">Imóvel Novo</a></li>
-                <li><a href="#">Serviços</a></li>
+                <li><a href="#" onclick="limparUserInfo()">Sair</a></li>
                 <li><a href="login.html"><p class="entrar">Entrar</p></a></li>
               </ul>
             </nav>
@@ -118,6 +118,7 @@
       <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
       <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
       <script src="cadaCasa.js"></script>
+      <script src="index.js"></script>
     </body>
     </html>
 </span>
