--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#">Compar</a></li>
                 <li><a href="#">Alugar</a></li>
                 <li><a href="#">Imóvel Novo</a></li>
-                <li><a href="#">Serviços</a></li>
+                <li><a href="#" onclick="limparUserInfo()">Sair</a></li>
                 <li><a href="login.html"><p class="entrar">Entrar</p></a></li>
               </ul>
             </nav>
@@ -234,6 +234,7 @@
    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
    <script src="teste.js"></script>
+   <script src="index.js"></script>
     </body>
     </html>
 </span>
